# CMU16825_Final_project

./: .gitignore  AUTOCOMPLETE_INTUITION.md  DEEPSPEED.md  DEEPSPEED_SETUP.md  IMPLEMENTATION_SUMMARY.md  LOCAL_TRAINING_GUIDE.md  MEMORY_TEST_GUIDE.md  MULTIMODAL_INFERENCE_SOLUTION.md  NCCL_FIX.md  OOM_FIX_SUMMARY.md  QUICK_START_DEEPSPEED.md  README.md  RUN_GUIDE.md  Read_me_for_encoder.txt  SETUP_CHECKLIST.md  TRAINING_IMPROVEMENTS.md  TRUNCATION_LOGIC.md  TRUNCATION_TEST_RESULTS.md  analyze_generation_pipeline.py  analyze_omni_cad.py  cad_validation.py  check_dataset_size.py  colab_train_stage1.sh  colab_training_template.py  convert_generated_to_cadseq.py  convert_json_for_evaluation.py  dataloader_hyc.ipynb  diagnose_cad_issues.py  eval_process.py  evaluate_with_groundtruth.py  find_data.py  inference_autocomplete.py  inference_with_validation.py  inspect_curves.py  notes.md  pyproject.toml  repair_cad_for_export.py  requirements.txt  sweep_overnight_5070ti.yaml  test_optimal_config.py  (+5 more)
.claude/: settings.local.json
Michelangelo/: README.md  inference.py  pyproject.toml  requirements.txt  setup.py
Michelangelo/configs/aligned_shape_latents/: shapevae-256.yaml
Michelangelo/configs/image_cond_diffuser_asl/: image-ASLDM-256.yaml
Michelangelo/configs/text_cond_diffuser_asl/: text-ASLDM-256.yaml
Michelangelo/michelangelo/graphics/primitives/: __init__.py  mesh.py  volume.py
Michelangelo/michelangelo/utils/: __init__.py  eval.py  io.py  misc.py
Michelangelo/scripts/: infer.sh
Michelangelo/scripts/inference/: image2mesh.sh  reconstruction.sh  text2mesh.sh
(+459 files in other folders)
