[project]
name = "cad-mllm"
version = "0.1.0"
description = "Reproduction of CAD-MLLM: Unifying Multimodality-Conditioned CAD Generation With MLLM"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",
    "einops>=0.7.0",
    "sentencepiece>=0.1.99",
    "omegaconf>=2.3.0",
    "cython",
    "hatchling>=1.27.0",
    "editables>=0.5",
    "pytorch-lightning>=2.5.6",
    "huggingface-hub>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.uv.sources]
michelangelo = { path = "Michelangelo", editable = true }
